--- a/hillel-react/public/index.html
+++ b/hillel-react/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>React App</title>
+    <title>Github Battle</title>
+    <link rel="icon" href="./githublogo.svg">
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
    
   </body>
